gradle config just about done version 2 (why do sources not get generated??)